-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.6.3, 6.7.0
-
None
-
MacBook Pro 13-inch, M1, 2020
macOS Sonoma 14.4.1
-
-
47a076e58 (dev), bd8bcff50 (6.8)
Path override failed for key base::DIR_APP_DICTIONARIES and path '/Users/vladimir.belyavsky/Qt projects/build-untitled-Qt_6_7_0_for_macOS-Profile/appuntitled.app/Contents/MacOS/qtwebengine_dictionaries' Path override failed for key base::DIR_APP_DICTIONARIES and path '/Users/vladimir.belyavsky/Qt/6.7.0/macos/lib/QtWebEngineCore.framework/Versions/A/Helpers/QtWebEngineProcess.app/Contents/MacOS/qtwebengine_dictionaries'
Sample code:
import QtQuick import QtWebEngine Window { width: 640 height: 480 visible: true WebEngineView { } }
- relates to
-
QTBUG-124816 "qtwebengine_dictionaries" not found with Mnemosyne Project
-
- Closed
-
| For Gerrit Dashboard: QTBUG-124110 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 577302,4 | Do not warn needlessly about missing dictionaries directory | dev | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 577666,2 | Do not warn needlessly about missing dictionaries directory | 6.8 | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 579191,1 | Do not warn needlessly about missing dictionaries directory | 6.7 | qt/qtwebengine | Status: ABANDONED | 0 | 0 |