Do not warn needlessly about missing dictionaries directory

Dictionaries are only required if spellchecking is enabled,
therefore make sure we print out the warning in the
right time. Do not enable spellchecker if dictionary
directory is not present.

This change amends d86ddb74877342d82c36cb9f47cccb53bf339e23

Fixes: QTBUG-124110
Pick-to: 6.8 6.7
Change-Id: I49fb191d40c81252e1a17835988621fa2e01ff79
Reviewed-by: Anu Aliyas <anu.aliyas@qt.io>